# Alerta

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/alerta/: CHANGELOG.md  Cargo.toml
crates/alerta-cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/alerta-cli/src/: main.rs
crates/alerta-cli/tests/: sizebench.rs
crates/alerta/src/: error.rs  lib.rs  tests.rs  ui.rs  x11.rs
crates/alerta/src/ui/: font.rs
